--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -364,7 +364,7 @@ a{
     aspect-ratio: 16/8;
     overflow: hidden;
     margin-block: 80px;
-    background-image: url('https://dev-dymon.github.io/ipoint_hub_frontend/assets/image/Container.jpg');
+    background-image: url('assets/image/Container.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
